# CrabLauncher

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  download.rs  env.rs  error.rs  instances.rs  java.rs  launch.rs  main.rs  manifest.rs  profiles.rs  rule.rs  setup.rs
src/client/: download.rs  mod.rs  rule.rs
src/json/: client.rs  manifest.rs  mod.rs
