[package]
name = "CrabLauncher"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

zip = "2.1.3"
rust_search = "2.0.0"
regex = "1.10.5"
